--- a/main.css
+++ b/main.css
@@ -45,20 +45,55 @@ body {
 }
 
 #gauges {
-    margin: 0 auto;
+    margin: 4px auto;
     width: fit-content;
-    padding: 10px 0;
-}
-
-#chart-analyze {
-    position: relative;
-    margin: 0 auto;
-    width: 80%;
-    height: 300px;
-
+    padding: 10px;
 }
 
 #gauges div {
     display: inline-block;
     text-align: center;
 }
+
+#chart-analyze {
+    position: relative;
+    margin: 0 auto;
+    width: 80%;
+    height: 200px;
+}
+
+#chart-advanced-configuration {
+    position: relative;
+    margin: 40px auto;
+    width: 80%;
+    height: 150px;
+}
+
+#advanced-configuration-dygraph {
+    width: 50% !important;
+    display: inline-block;
+}
+
+.vl {
+    border-left: 2px solid white;
+    height: 20px;
+    display: inline-block;
+}
+
+#controles {
+    display: inline-block;
+    width: 50% !important;
+    top: 20px;
+    position: absolute;
+}
+
+#mostrar {
+    display: inline-block;
+    padding: 0 10px;
+}
+
+#configurar {
+    display: inline-block;
+    padding: 0 10px;
+}
+
