Organização geral do código, documentação de maior parte da aplicação, inclusão do numéric gauge, inclusão do recurso de armazenamento de dados local, resolução de alguns bugs, melhora na classe de conexão, resolvido o problema de sincronia, incluído funcionalidades de configuração, incluído função de envido de dados para o sservidor e otimização de desenpenho

--- a/libs/dygraph/css/customizacao-dygraph.css
+++ b/libs/dygraph/css/customizacao-dygraph.css
@@ -1,7 +1,7 @@
 .dygraph {
     position: relative;
-    width: 100% !important;
-    height: 100% !important;
+    width: 100%;
+    height: 100%;
 }
 
 .dygraph-axis-label {
